Bug 548416 - [13] [test] Fix test failures in Java 13 - next set
Change-Id: I8f4f87615b5b9acb11c54f759be558820b6ef790